--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
       font-size: 1rem;
       cursor: pointer;
     }
-    #restaurant-list { list-style: none; padding: 0; }
-    #restaurant-list li {
-      background: #f9f9f9;
-      margin: 0.5rem 0;
-      padding: 0.75rem;
-      border-radius: 6px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
     }
-    .name { font-weight: bold; margin-bottom: 0.25rem; }
-    .stars { font-size: 1.1rem; color: #f5a623; } /* gold-ish stars */
-    .rating-info { margin-bottom: 0.25rem; color: #555; }
-    .address { color: #333; }
+    th, td {
+      text-align: left;
+      padding: 0.75rem;
+      border-bottom: 1px solid #ddd;
+    }
+    th {
+      background: #f4f4f4;
+    }
     .error { color: red; }
   </style>
 </head>
@@ -87,7 +88,18 @@
     <span id="status"></span>
   </div>
 
-  <ul id="restaurant-list"></ul>
+  <table id="restaurant-table">
+    <thead>
+      <tr>
+        <th>Restaurant Name</th>
+        <th>Rating (out of 5)</th>
+        <th>Number of Reviews</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- rows inserted here -->
+    </tbody>
+  </table>
 
   <script>
     let geocoder, placesService;
@@ -103,8 +115,8 @@
       const address = document.getElementById('location-input').value.trim();
       const cuisine = document.getElementById('cuisine-select').value;
       const status = document.getElementById('status');
-      const listEl = document.getElementById('restaurant-list');
-      listEl.innerHTML = '';
+      const tbody = document.querySelector('#restaurant-table tbody');
+      tbody.innerHTML = '';
       status.textContent = '';
       if (!address) {
         status.textContent = 'Please enter a pincode or locality.';
@@ -119,7 +131,7 @@
           return;
         }
         const loc = results[0].geometry.location;
-        status.textContent = 'Searching for restaurants...';
+        status.textContent = 'Searching for top-rated restaurants...';
         findTopRated(loc, cuisine);
       });
     }
@@ -135,45 +147,31 @@
       }
       placesService.nearbySearch(request, (results, placesStatus) => {
         const status = document.getElementById('status');
+        const tbody = document.querySelector('#restaurant-table tbody');
         if (placesStatus !== 'OK' || !results || results.length === 0) {
           status.textContent = 'No restaurants found.';
           status.className = 'error';
           return;
         }
-        // Keep only those with a rating, then sort by rating desc, then by number of reviews desc
-        const withRatings = results.filter(r => typeof r.rating === 'number');
-        withRatings.sort((a, b) => {
-          if (b.rating !== a.rating) return b.rating - a.rating;
-          return (b.user_ratings_total || 0) - (a.user_ratings_total || 0);
-        });
+        // Keep only those with a rating, then sort by rating and reviews
+        const withRatings = results
+          .filter(r => typeof r.rating === 'number')
+          .sort((a, b) => {
+            if (b.rating !== a.rating) return b.rating - a.rating;
+            return (b.user_ratings_total || 0) - (a.user_ratings_total || 0);
+          });
         const top5 = withRatings.slice(0, 5);
-        renderList(top5);
+        top5.forEach(place => {
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td>${place.name}</td>
+            <td>${place.rating.toFixed(1)}</td>
+            <td>${place.user_ratings_total || 0}</td>
+          `;
+          tbody.appendChild(tr);
+        });
         status.textContent = `Showing top 5 ${cuisine || ''} restaurants by rating.`;
         status.className = '';
-      });
-    }
-
-    function getStars(rating) {
-      const rounded = Math.round(rating);
-      let stars = '';
-      for (let i = 0; i < rounded; i++) stars += '★';
-      for (let i = rounded; i < 5; i++) stars += '☆';
-      return stars;
-    }
-
-    function renderList(restaurants) {
-      const listEl = document.getElementById('restaurant-list');
-      restaurants.forEach(place => {
-        const li = document.createElement('li');
-        li.innerHTML = `
-          <div class="name">${place.name}</div>
-          <div class="stars">${getStars(place.rating)}</div>
-          <div class="rating-info">
-            ${place.rating.toFixed(1)} out of 5 &bull; ${place.user_ratings_total || 0} reviews
-          </div>
-          <div class="address">${place.vicinity || place.formatted_address || ''}</div>
-        `;
-        listEl.appendChild(li);
       });
     }
   </script>
