--- a/index.html
+++ b/index.html
@@ -235,7 +235,12 @@
             title: place.name
           });
           marker.addListener('click', () => {
-            infoWindow.setContent(`<strong>${place.name}</strong><br />${place.rating.toFixed(1)} out of 5`);
+            const mapsUrl = `https://www.google.com/maps/search/?api=1&query_place_id=${place.place_id}`;
+            infoWindow.setContent(
+              `<div><strong>${place.name}</strong><br />${place.rating.toFixed(1)} out of 5<br />` +
+              `<a href="${mapsUrl}" target="_blank">` +
+              `<button>Open in Google Maps</button></a></div>`
+            );
             infoWindow.open(map, marker);
           });
           markers.push(marker);
