--- a/index.html
+++ b/index.html
@@ -3,23 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Top Rated Restaurants Finder</title>
+  <title>Commun-EAT-y</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 2rem; }
+    h1 { font-size: 2.5rem; margin-bottom: 0; }
+    .tagline { font-size: 1.2rem; margin-top: 0.2rem; color: #555; }
     #controls {
-      margin-bottom: 1rem;
+      margin: 1.5rem 0;
       display: flex;
       flex-wrap: wrap;
-      gap: 0.5rem;
+      gap: 1rem;
       align-items: center;
     }
-    #controls select,
-    #controls input {
+    .input-group { position: relative; }
+    .input-group input {
       padding: 0.5rem;
       font-size: 1rem;
+      width: 250px;
     }
+    .suggestions {
+      position: absolute;
+      top: 100%; left: 0;
+      right: 0;
+      background: #fff;
+      border: 1px solid #ccc;
+      max-height: 200px;
+      overflow-y: auto;
+      z-index: 1000;
+    }
+    .suggestion-item {
+      padding: 0.5rem;
+      cursor: pointer;
+    }
+    .suggestion-item:hover {
+      background-color: #f0f0f0;
+    }
+    #controls select,
     #controls button {
-      padding: 0.6rem 1rem;
+      padding: 0.5rem 1rem;
       font-size: 1rem;
       cursor: pointer;
     }
@@ -46,19 +67,21 @@
   </style>
 </head>
 <body>
+  <h1>Commun-EAT-y</h1>
+  <p class="tagline">Discover flavor. Share belonging.</p>
+
   <div id="controls">
-    <input
-      id="location-input"
-      list="location-datalist"
-      type="text"
-      placeholder="Enter pincode or locality"
-      size="30"
-    />
-    <datalist id="location-datalist"></datalist>
+    <div class="input-group">
+      <input
+        id="location-input"
+        type="text"
+        placeholder="Enter pincode or locality"
+      />
+      <div id="suggestions" class="suggestions" style="display:none;"></div>
+    </div>
 
     <select id="cuisine-select">
       <option value="">Any cuisine</option>
-      <!-- cuisine options... -->
       <option>American</option>
       <option>Asian</option>
       <option>Bakery</option>
@@ -132,38 +155,55 @@
       document.getElementById('search-btn')
               .addEventListener('click', onSearchClick);
 
-      // Initialize blank map centered on Bangalore
       map = new google.maps.Map(document.getElementById('map'), {
         center: { lat: 12.9716, lng: 77.5946 },
         zoom: 12
       });
 
-      // Autofill setup
       const locInput = document.getElementById('location-input');
-      const datalist  = document.getElementById('location-datalist');
+      const suggestions = document.getElementById('suggestions');
       let debounceTimer;
 
       locInput.addEventListener('input', () => {
         clearTimeout(debounceTimer);
         const term = locInput.value.trim();
-        if (term.length < 3) return;
+        if (term.length < 3) {
+          suggestions.style.display = 'none';
+          return;
+        }
         debounceTimer = setTimeout(() => {
           autocompleteService.getPlacePredictions({
             input: term,
             types: ['(regions)'],
-            componentRestrictions: { country: 'IN' }
+            componentRestrictions: { country: 'IN', locality: 'Bengaluru' },
+            locationBias: new google.maps.Circle({
+              center: { lat: 12.9716, lng: 77.5946 }, radius: 20000
+            })
           }, (preds, status) => {
             if (status === google.maps.places.PlacesServiceStatus.OK && preds) {
+              preds = preds.filter(p =>
+                /\b(560\d{3}|[A-Za-z\s]+)\b/.test(p.terms.map(t=>t.value).join(' '))
+              ); // basic filter for Bangalore PIN codes/localities
               preds.sort((a, b) => a.description.localeCompare(b.description));
-              datalist.innerHTML = '';
+              suggestions.innerHTML = '';
               preds.forEach(p => {
-                const opt = document.createElement('option');
-                opt.value = p.description;
-                datalist.appendChild(opt);
+                const item = document.createElement('div');
+                item.textContent = p.description;
+                item.className = 'suggestion-item';
+                item.addEventListener('click', () => {
+                  locInput.value = p.description;
+                  suggestions.style.display = 'none';
+                });
+                suggestions.appendChild(item);
               });
+              suggestions.style.display = preds.length ? 'block' : 'none';
             }
           });
         }, 300);
+      });
+
+      document.addEventListener('click', e => {
+        if (!locInput.contains(e.target)) suggestions.style.display = 'none';
       });
     }
 
@@ -211,11 +251,9 @@
           status.className = 'error';
           return;
         }
-        // Clear existing markers
         markers.forEach(m => m.setMap(null));
         markers = [];
 
-        // Filter & sort
         const top5 = results
           .filter(r => typeof r.rating === 'number')
           .sort((a, b) => {
@@ -224,12 +262,10 @@
           })
           .slice(0, 5);
 
-        // Update table and map
         map.setCenter(location);
         map.setZoom(14);
 
         top5.forEach((place, i) => {
-          // Table row with hyperlink
           const tr = document.createElement('tr');
           tr.innerHTML = `
             <td><a href="javascript:void(0)" class="restaurant-link" onclick="focusMarker(${i})">${place.name}</a></td>
@@ -239,7 +275,6 @@
           `;
           tbody.appendChild(tr);
 
-          // Add marker
           const marker = new google.maps.Marker({
             map: map,
             position: place.geometry.location,
@@ -266,7 +301,7 @@
   </script>
 
   <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqKeq3a0O__Mm7EQLy0zrHYuJUq8Ly1Ps&libraries=places&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqKeq3a0O__Mm7EQLy0zrHYuJUq8Ly1Ps&libraries=places,geometry&callback=initMap">
   </script>
 </body>
 </html>
